fixed overflowing problem

--- a/projects/financial/basic.scss
+++ b/projects/financial/basic.scss
@@ -15,6 +15,7 @@ html {
 
 body {
     background-color: var(--vd-blue);
+    max-width: 100vw;
     overflow-x: hidden;
 }
 #logo {
