--- a/projects/financial/style.scss
+++ b/projects/financial/style.scss
@@ -195,7 +195,6 @@
 #users-sec {
     padding-inline: 0;
     padding-block: 12.5rem;
-    overflow-x: hidden;
     min-height: auto;
 
     .flex-row {
@@ -206,6 +205,8 @@
     .com-carousel {
         display: grid;
         grid-auto-flow: column;
+        overflow-x: auto;
+        scroll-behavior: smooth;
         gap: 1rem;
         width: 100%;
         transition: margin-left 0.2s;
@@ -550,9 +551,9 @@ section {
 }
 
 .blured {
-    width: 40rem;
-    height: 40rem;
-    filter: blur(10rem);
+    width: 40%;
+    height: 40%;
+    filter: blur(5rem);
     background-color: var(--d-blue);
     border-radius: 50%;
     position: absolute;
